Integrate with jquery and jq plugins

--- a/src/app/layout/side-bar.component.html
+++ b/src/app/layout/side-bar.component.html
@@ -32,7 +32,7 @@
       </a>
     </li>
     <li ng-class="{active:$state.includes('home.user')}">
-      <a [routerLink]="['./about']">
+      <a [routerLink]="['./user']">
         <i class="icon-user"></i>
         <span class="title">用户</span>
       </a>
