--- a/src/app/layout/side-bar.component.html
+++ b/src/app/layout/side-bar.component.html
@@ -38,7 +38,7 @@
       </a>
     </li>
     <li ng-class="{active:$state.includes('home.setting')}">
-      <a [routerLink]="['./detail']">
+      <a [routerLink]="['./about']">
         <i class="icon-settings"></i>
         <span class="title">设置</span>
       </a>
