UI 、mockdata、default route

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<b style="font-size: 24px;margin: 4px 150px 0 0">完善个人资料</b>
+<h3>完善个人资料</h3>
 <form class="form-horizontal" role="form">
   <div class="row">
     <div class="col-md-6">
